--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ latex:
 # Information about where the book exists on the web
 repository:
   url: https://github.com/ScaDS/napari-tutorial-2023
-  path_to_book:  # Optional path to your book, relative to the repository root
+  path_to_book: . # Optional path to your book, relative to the repository root
   branch: main  # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
