--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -28,11 +28,11 @@ jobs:
     # Build the book
     - name: Build the book
       run: |
-        jupyter-book build docs/
+        jupyter-book build
 
     # Push the book's HTML to github-pages
     - name: GitHub Pages action
       uses: peaceiris/actions-gh-pages@v3.5.9
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs/_build/html
+        publish_dir: ./_build/html
